#### Release: 5.1.1 ####

New Features:
 * Support input and output resqml2 standards
 * change build organization: remove "ringmesh" folder

Bug fix:
 * Fix geomodel_copy in 2D
 * remove the try for RINGMESH GUI with nbind

Improvements:
 * geogram release 1.6.11



#### Release: 5.1.0 ####

New Features:
 * New (command-line) executable to edit GeoModel name.
 * Possibility to toggle off each validity check.
 * New executable to tetrahedralize an input GeoModel
 * Add new colormaps
 * Split IO GeoModel factories in two disctint factories:
     * one to register extensions that can be loaded
     * one to register extensions that can be saved 
 * Addition of fully operational Cartesian grids (with Attributes)

Bug fix:
 * In the computation of lines and corners from surfaces

Improvements:
 * Change default colormap for attributes
 * Reorganize CMake architecture (using SuperProject)
 * Add new geometrical tests 

#### Release: 5.0.0 ####

Major change:
 * Add support of 2D GeoModel:
     * User can use GeoModel2D and GeoModel3D, they follow the same boundary representation design as before
     * Meshes can be defined using only 2 coordinates

New Features:
 * Add support to Mac OS using Clang (Unix Makefile and Xcode project). Works
       with the internal eclipse project.
 * Add import of SVG file for GeoModel2D.
       We only read pathes and they should be flat. There is a command to flatten pathes in Inkscape.
 * Add a GeoModel2D builder from projection of GeoModel3D on a given plane.
 * Add objects to iterate using range-loop like for integers and GeoModelMeshEntities:
       objects are range for integers, region_range for Regions etc.
 * Generic factory:
     * the key is template
     * the instantiated classes can have different constructor arguments (type and number)
 * Use of clang-format to format C++ code

Bug fix:
 * Error in computation of polygon area (for 3D concave polygons)
 * Crash when removing the first object in RINGMeshView object tree